Spring Boot 버전 업 및 구독 여부, 구독자 수 추가